# clawhome

./: .gitignore  AGENTS.md  clawhome.sh
client/: .npmignore  package-lock.json  package.json
client/src/: cli.ts  client.ts  config.ts  daemon.ts  detector.ts  executor.ts  index.ts  local-api.ts  openapi-client.ts  openapi-installer.ts  storage.ts
client/src/collectors/: base.ts  custom.ts  openclaw.ts  system.ts
client/templates/: cursor.yaml  generic.yaml  openclaw.yaml
server/: .env.example  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 001_init.py  002_openclaw_metrics.py  003_openclaw_extended_metrics.py  004_lobster_profile.py  005_sessions_and_alerts.py  006_token_breakdown_metrics.py
server/app/: main.py
server/app/core/: config.py  database.py  security.py  ws_manager.py
server/app/models/: __init__.py  agent.py  alert.py  certificate.py  diary.py  metric.py  profile.py  session.py  skill.py  user.py
server/app/routers/: agents.py  alerts.py  auth.py  certificate.py  diary.py  exam.py  metrics.py  profile.py  skills.py  study.py  work.py  ws.py
server/app/schemas/: agent.py  alert.py  certificate.py  diary.py  metric.py  profile.py  session.py  skill.py  user.py
server/app/services/: agent_access.py  agent_init.py  prompt_templates.py  session_dispatch.py  skill_seeds.py
server/static/lobster/: app.js  index.html  lobster-api.js  phaser-scenes.js  sprite-animator.js  styles.css
web/: .env.example  package-lock.json  package.json  vite.config.ts
web/src/api/: index.ts
web/src/assets/: main.css
(+9 files in other folders)
