[project]
name = "clawhome-server"
version = "0.1.0"
description = "ClawHome Agent Monitor - Server"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
]

[project.scripts]
clawhome-server = "app.main:app"

[tool.uv]
dev-dependencies = ["pytest>=8.0", "httpx>=0.27"]
